Bug 12210 - <svg> does not properly handle float: left?
Summary: <svg> does not properly handle float: left?
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: SVG (show other bugs)
Version: 420+
Hardware: Mac OS X 10.4
: P2 Normal
Assignee: Nobody
URL: http://www.intertwingly.net/blog/2006...
Keywords: HasReduction
Depends on:
Blocks:
 
Reported: 2007-01-11 07:11 PST by Nicholas Shanks
Modified: 2007-01-14 23:09 PST (History)
0 users

See Also:


Attachments
test case (365 bytes, application/xhtml+xml)
2007-01-14 22:23 PST, Eric Seidel (no email)
no flags Details
Test case that illustrates float problem as well as margin, border and padding issues. (914 bytes, application/xhtml+xml)
2007-01-14 22:34 PST, Dave Hyatt
no flags Details
the fix (and test case) (40.29 KB, patch)
2007-01-14 23:06 PST, Eric Seidel (no email)
hyatt: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Nicholas Shanks 2007-01-11 07:11:50 PST
I saw this linked to from the WHATWG mailing list with the comment:

"That page works well with Opera and Firefox, and degrades gracefully
in Safari 2 and Internet Explorer. It is not working well in recent
WebKit nightlies, but I'm sure that is temporary."

And sure enough the bubbles seem to have floated to the top of the page :)
Comment 1 Eric Seidel (no email) 2007-01-14 21:38:31 PST
I think this is that <svg> doesn't properly handle float:left.  I expect it's being passed in values for tx, ty when drawing and then ignoring them.  Not sure.
Comment 2 Eric Seidel (no email) 2007-01-14 22:23:24 PST
Created attachment 12440 [details]
test case
Comment 3 Dave Hyatt 2007-01-14 22:34:43 PST
Created attachment 12441 [details]
Test case that illustrates float problem as well as margin, border and padding issues.
Comment 4 Eric Seidel (no email) 2007-01-14 23:06:12 PST
Created attachment 12442 [details]
the fix (and test case)
Comment 5 Dave Hyatt 2007-01-14 23:08:19 PST
Comment on attachment 12442 [details]
the fix (and test case)

Typo:

+    // This should only be exist for <svg> renderers

there's a stray "be".

r=me