2007-01-14  Eric Seidel  <eric@webkit.org>

Reviewed by hyatt.

        SVG does not correctly handle float: left
        http://bugs.webkit.org/show_bug.cgi?id=12210

        Test: svg/custom/svg-float-border-padding.xml

        * rendering/RenderSVGContainer.cpp:
        (WebCore::RenderSVGContainer::paint):


Canonical link: https://commits.webkit.org/15858@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18854 268f45cc-cd09-0410-ab3c-d52691b4dbfc